--- a/web/private/write/ManageBooks.html
+++ b/web/private/write/ManageBooks.html
@@ -510,7 +510,7 @@ function GetBooklist()
 	xhr.send(null);
 }
 
-window.addEventListener("load",function(){User.initialise("managebookslink");GetBooklist();},false);
+window.addEventListener("load",function(){initialise("managebookslink");GetBooklist();},false);
 </script>
 <style>
 
