Added a fix so that logout is possible from every page

--- a/web/private/write/ManageBooks.html
+++ b/web/private/write/ManageBooks.html
@@ -701,7 +701,7 @@ h1 {
     <a id='managebookslink' class='classifiedContent active' href='/private/write/ManageBooks.html' data-acc=2>Manage Books</a>
     <div class='topnav-right-in' id='loggedintopnav'>
         <span id='LoggedInAs'>Logged in</span>
-        <button id='logoutBut' onclick='User.DoLogout()'>Logout</button>
+        <button id='logoutBut' onclick='DoLogout()'>Logout</button>
     </div>
     <div class='topnav-right-out' id='loggedouttopnav'>
         <form id ="LoginForm" action="/login" method="post">
