--- a/web/private/admin/Administration.html
+++ b/web/private/admin/Administration.html
@@ -235,7 +235,7 @@ window.addEventListener("load",function(){initialise("administrationlink");OnUse
     <a id='managebookslink' class='classifiedContent' href='/private/write/ManageBooks.html' data-acc=2>Manage Books</a>
     <div class='topnav-right-in' id='loggedintopnav'>
         <span id='LoggedInAs'>Logged in</span>
-        <button id='logoutBut' onclick='User.DoLogout()'>Logout</button>
+        <button id='logoutBut' onclick='DoLogout()'>Logout</button>
     </div>
     <div class='topnav-right-out' id='loggedouttopnav'>
         <form id ="LoginForm" action="/login" method="post">
