--- a/web/private/write/UploadBook.html
+++ b/web/private/write/UploadBook.html
@@ -322,7 +322,7 @@ window.addEventListener("load",function(){initialise("uploadbooklink");init_even
 
 	<div class='topnav-right-in' id='loggedintopnav'>
 	    <span id='LoggedInAs'>Logged in</span>
-	    <button id='logoutBut' onclick='User.DoLogout()'>Logout</button>
+	    <button id='logoutBut' onclick='DoLogout()'>Logout</button>
 	</div>
 	<div class='topnav-right-out' id='loggedouttopnav'>
 	    <form id ="LoginForm" action="/login" method="post">
