--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -8,7 +8,7 @@
     <title>Informationen zu CLAS digital</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <script src='/user.js'></script>
+    <script src='../user.js'></script>
 <style>
 body {
     background: linear-gradient(rgba(255,255,255,.9), rgba(255,255,255,.9)), url("/clasdigital.png");;
@@ -40,7 +40,7 @@ html {
 </style>
 <link href="/topnav.css" rel="stylesheet" type="text/css">
 <script>
-window.addEventListener("load",function(){User.initialise("homelink");},false);
+window.addEventListener("load",function(){initialise("homelink");},false);
 </script>
   </head>
 <body>
@@ -59,7 +59,7 @@ window.addEventListener("load",function(){User.initialise("homelink");},false);
                 <input id="EmailType" type="email" name="email" placeholder="Email" aria-label="Email" required>
                 <input id="PasswordType" type="password" name="password" placeholder="Password" aria-label="Password" required>
                 <input type="submit" value="Log In"/>
-            </form>'
+            </form>
         </div>
     </div>
 
