--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -52,7 +52,7 @@ window.addEventListener("load",function(){initialise("homelink");},false);
         <a id='managebookslink' class='classifiedContent' href='/private/write/ManageBooks.html' data-acc=2>Manage Books</a>
         <div class='topnav-right-in' id='loggedintopnav'>
             <span id='LoggedInAs'>Logged in</span>
-            <button id='logoutBut' onclick='User.DoLogout()'>Logout</button>
+            <button id='logoutBut' onclick='DoLogout()'>Logout</button>
         </div>
         <div class='topnav-right-out' id='loggedouttopnav'>
             <form id ="LoginForm" action="/login" method="post">
