fixes #89 and fixes #130

--- a/web/Search.html
+++ b/web/Search.html
@@ -105,7 +105,7 @@
             <div id="ResultBannerFooter" style="margin-top: 2rem; margin-bottom:0;">
                 <div class='selectdiv' style="display:inline-block;">
                 <label>
-                <select id='maxresultsperpage' onchange='OpenFilter(this);return true;' style='background:white;'>
+                <select id='limit' onchange='OpenFilter(this);return true;' style='background:white;'>
                    <option value='10'>Show 10 results per page</option>
                    <option value='20'>Show 20 results per page</option>
                    <option value='50'>Show 50 results per page</option>
