--- a/web/Search.html
+++ b/web/Search.html
@@ -104,6 +104,7 @@
 
 
             <div id="ResultBannerFooter" style="margin-top: 2rem; margin-bottom:0;">
+            <div style="margin-left:14.2%;">
                 <div class='selectdiv' style="display:inline-block;">
                 <label>
                 <select id='limit' onchange='OpenFilter(this);return true;' style='background:white;'>
@@ -114,8 +115,8 @@
                </select>
                <label>
                </div>
-                <div class='selectdiv' style="display:inline-block;">
-                <label>
+               <div class='selectdiv' style="display:inline-block;">
+               <label>
                <select id='sorting' onchange='OpenFilter(this);return true;' onclick='return true;' style='background:white;'>
                    <option value='relevance'>Sort by relevance</option>
                    <option value='alphabetically'>Sort alphabetically</option>
@@ -124,21 +125,19 @@
                </label>
                </div>
                <button class='advanceopts' onclick='CreateBibliography();return true;'>Create Bibliography</button>
+
+                <div id="selAll" class="selAll" >
+                    Select All <input type="checkbox" onchange="SelectAll(this.checked);return true;"></input>
+                </div>
+
+           </div> 
+
                <hr style='padding: 0;'>
                <span style='color: grey;font-size:13px;'><span id="maxResults"></span> Ergebnisse gefunden in <span id="searchTime"></span></span>
             </div>
         </div>
         <div>
-            <div><ul id="hitList" class="searchResults">
-                    <li id="selAll" style="display:none;"> 
-                        <div class="searchResult"></div>
-                        <div class="tickbox" style="margin-left:-1%;">
-                            <label class="advanceoptsText" style="border:none;margin-right:4%;">Select All</label>
-                            <input type="checkbox" onchange="SelectAll(this.checked);return true;"></input>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+            <div><ul id="hitList" class="searchResults"> </ul> </div>
             <div><hr id="bottomBorder" style="padding:0;display:none;"></div>
             <div><ul id="linkcontainer" class="linkcontainer"></ul> </div>
             <div id="next_last">
