--- a/web/Search.html
+++ b/web/Search.html
@@ -104,7 +104,7 @@
 
 
             <div id="ResultBannerFooter" style="margin-top: 2rem; margin-bottom:0;">
-            <div style="margin-left:14.2%;">
+            <div style="width:80%;margin-left:18.8%;">
                 <div class='selectdiv' style="display:inline-block;">
                 <label>
                 <select id='limit' onchange='OpenFilter(this);return true;' style='background:white;'>
@@ -137,9 +137,9 @@
             </div>
         </div>
         <div>
-            <div><ul id="hitList" class="searchResults"> </ul> </div>
+            <div ><ul id="hitList" class="searchResults"> </ul> </div>
             <div><hr id="bottomBorder" style="padding:0;display:none;"></div>
-            <div><ul id="linkcontainer" class="linkcontainer"></ul> </div>
+            <div class="linkcontainerDiv"><ul id="linkcontainer" class="linkcontainer"></ul> </div>
             <div id="next_last">
                 <a id="prev" class="prev_next">prev</a>
                 <a id="next" class="prev_next">next</a>
