Added tesseract fix

--- a/web/private/write/UploadBook.html
+++ b/web/private/write/UploadBook.html
@@ -19,6 +19,10 @@ body {
     margin:0;
 }
 
+h2 {
+    margin-top: 2rem;
+}
+
 .biggerPageClass {
     padding-left: 10%;
     padding-right: 10%;
@@ -384,7 +388,7 @@ function ShowImageSlide(fl,key)
 function ShowBookContentLink()
 {
     let lnk = ExtractKey();
-    document.getElementById("BookContentLink").innerHTML = "<a href='/books/"+lnk+"/' target='_blank'>Book File List Index</a>";
+    document.getElementById("BookContentLink").innerHTML = "<a href='/books/"+lnk+"/' target='_blank'>Book File List Index</a><a style='margin-left: 4rem;' href='/ShowMetadata.html?scanId="+lnk+"' target='_blank'> Book Metadata</a>";
 }
 
 function UploadAll()
@@ -409,6 +413,18 @@ function UploadAll()
 	}
     }
     ShowStatus("Uploaded all files successfully! In order to find results in the new book you have to restart the server!","green");
+}
+
+function show_language()
+{
+    if(this.checked)
+    {
+	document.getElementById("languageopt").style.display = "inherit";
+    }
+    else
+    {
+	document.getElementById("languageopt").style.display = "none";
+    }
 }
 
 
@@ -465,7 +481,18 @@ window.addEventListener("load",function(){initialise("uploadbooklink");init_even
 	<div id="BookContentLink" style='display:inline-block;margin-left: 2rem;'></div>
 	</input>
 	<br>
-	<h2><span>4.</span>Speichern!</h2>
+	<h2><span>4.</span>Ocr Options</h2>
+	<p>Es ist moeglich eine OCR vom Server erstellen zu lassen um diese Option zu benutzen setzten sie bitte ein Haekchen in der Checkbox unten. <mark>Dieser Vorgang dauert sehr lange wenn sie diese Option nutzen laden sie nicht viele Dateien auf einmal hoch!</mark></p>
+	<div>
+	    <span>Der Server soll eine computergenerierte OCR erstellen: </span>
+	    <input onchange='show_language();' type='checkbox'/>
+	    <select id='languageopt' style='display: none;margin-left: 2rem;'>
+		<option value='deu_frak' selected>Deutsch Fraktur</option>
+		<option value='deu'>Deutsch</option>
+		<option value='eng'>Englisch</option>
+	    </select>
+	</div>
+	<h2><span>5.</span>Speichern!</h2>
 	<div class="saver" id="saver">
 	    <p>Speichere diesen Volltext auf dem Projektserver!</p>
 	    <button id="SaveNow" class="saveButton" onclick="UploadAll();return true;">Speichern!</button>
