Adding help page

--- a/web/Search.html
+++ b/web/Search.html
@@ -49,6 +49,7 @@
             <input id="SpecialSID" class="srchbar" onblur='sugg_disapear("corpus");return true;' type="text" placeholder="Search here..." required>
                 <button id="srchButton" class='srchbtn' type="button" onclick="sendToPage('SpecialSID');return true;"><i class="fa fa-search"></i></button>
             </input>
+            <a style="margin-left:2rem;" href="Usermanuel_Search.pdf" target="_blank">help</a>
 
             <div id="suggs_corpus" class="sugg" align="left"></div>
             <div id="suggs_author" class="sugg" style="top:5.7rem;left:26%;" align="left"></div>
