Changed searchbox size for mac

--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -20,7 +20,7 @@
 	<!--- Navbar element for the search bar and the next search -->
 	<div class='searchbox'>
 	    <center>
-	    <input id='srchbox' style='width:25%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-left: 1rem;margin-top: 0.5rem;height: 1.4rem;text-align: center;' type='text' placeholder="search this book"><i class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'></i></input>
+	    <input id='srchbox' style='width:25%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-left: 1rem;margin-top: 0.5rem;text-align: center;' type='text' placeholder="search this book"><i class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'></i></input>
 		<button id='tooglebut' onclick="read_mode(this);" style='float: right;margin:0.4rem;' title="Toggle full screen read mode">Page View</button>
 		<button id='fullbut' onclick='tooglefullscreen(this);' style='float: right; margin:0.4rem'>Fullscreen</button>
 		<div style='position: relative;left:-2rem;width: 25%;padding-left: 0.5rem;'>
