--- a/web/Search.html
+++ b/web/Search.html
@@ -127,7 +127,7 @@
 
                 
                <hr style='padding: 0;'>
-               <span style='color: grey;font-size:13px;margin-left:20%;'><span id="maxResults"></span> Ergebnisse gefunden in <span id="searchTime"></span></span>
+               <span style='color: grey;font-size:13px;margin-left:20%;'><span id="maxResults"></span> results found in <span id="searchTime"></span> seconds</span>
                <div id="selAll" class="selAll" >
                    Select All <input type="checkbox" onchange="SelectAll(this.checked);return true;"></input>
                </div>
