--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -23,8 +23,8 @@
 	    <input id='srchbox' style='width:25%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-left: 1rem;min-width: 10rem;margin-top: 0.5rem;text-align: center;' type='text' placeholder="search this book"><i class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'></i></input>
 	    <img id='fullbut' onclick='tooglefullscreen(this);' class='fullscreen' title='Toogle fullscreen mode' style='float: right; margin:0.5rem' src="/static/GetBooks/fullscreen-24px.svg"/>
 	    <img id='tooglebut' onclick="read_mode(this);" class='fullscreen' style='float: right;margin:0.5rem;' title="Toggle image reader and split reader mode" src="/static/GetBooks/chrome_reader_mode-24px.svg"></img>
-		<div style='position: relative;left:-2rem;width: 25%;min-width:20rem;padding-left: 0.5rem;'>
-		    <div id='fuzzysuggestions' style='visibility:hidden;z-index: 5;position: absolute;top:0;left: 1rem;background:white;border: 2px solid black;'></div>
+		<div style='position: relative;width:90%;height: 1px;'>
+		    <div id='fuzzysuggestions' style='visibility:hidden;overflow:scroll;z-index: 5;position: absolute;top:0;left: 0;right:0;margin-left: auto;margin-right:auto;height:80vh;background:white;border: 1px solid black;'></div>
 		</div>
 	    </center>
 	    <center><span id="bibliography" class="bibliostyle"></span></center>
