Working on issue #149,maybe this does the trick already cannot test it right now. All major browsers seem to have compability for the used function

--- a/web/private/admin/Administration.html
+++ b/web/private/admin/Administration.html
@@ -205,7 +205,7 @@ function ShutdownServer()
 	{
 	    StateBanner.ChangeBanner("The server will restart in a few seconds!",StateBannerType.success);
 	    window.scrollTo(0,0);
-	    window.setTimeout(function(){window.DoLogout()},1000);
+	    window.setTimeout(function(){DoLogout()},1000);
 	    return;
 	}
 	StateBanner.ChangeBanner("Could not restart server, error code: "+xhr.responseText,StateBannerType.danger);
