Working on #150 Linking favicon, so google can display in search results

--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="/GetBooks.css">	
+
+    <!-- Linking favicon so google can show in search results -->
+    <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
+
 	<script src="/general.js"></script>
 	<script src="/GetBooks.js"></script>
 
