--- a/web/Search.html
+++ b/web/Search.html
@@ -13,6 +13,9 @@
     <link href="topnav.css" rel="stylesheet" type="text/css">
     <link href="Search.css" rel="stylesheet">
 
+    <!-- Linking favicon so google can show in search results -->
+    <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
+
     <script src="Search.js"></script>
     <script src="user.js"></script>
 </head>
