--- a/web/private/write/ManageBooks.html
+++ b/web/private/write/ManageBooks.html
@@ -3,6 +3,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Linking favicon so google can show in search results -->
+    <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
+
     <!--<link rel="stylesheet" href="style.css">-->
     <title>Manage books - clas digital</title>
 
