--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -7,6 +7,10 @@
     <!--<link rel="stylesheet" href="style.css">-->
     <title>Informationen zu CLAS digital</title>
 
+    <!-- Linking favicon so google can show in search results -->
+    <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
+
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <script src='../user.js'></script>
 <style>
