--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -9,6 +9,7 @@
     
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel=”canonical” href=”https://www.clas-digital.uni-frankfurt.de/GetBooks.html” />
 
 	<link rel="stylesheet" href="/GetBooks.css">	
 	<script src="/general.js"></script>
