--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -8,6 +8,8 @@
     <title>Informationen zu CLAS digital</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel=”canonical” href=”https://www.clas-digital.uni-frankfurt.de/information/” />
+
     <script src='../user.js'></script>
 <style>
 body {
