--- a/web/private/write/UploadBook.html
+++ b/web/private/write/UploadBook.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <script src="/user.js"></script>
     <link href="/topnav.css" rel="stylesheet" type="text/css">
-
+	<link rel=”canonical” href=”https://www.clas-digital.uni-frankfurt.de/private/write/UploadBook.html” />
     <style>
 
 html {
