--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel=”canonical” href=”https://www.clas-digital.uni-frankfurt.de/GetBooks.html” />
 
+    <!-- Link favicon, so google can show in search results -->
+    <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
+
 	<link rel="stylesheet" href="/GetBooks.css">	
 	<script src="/general.js"></script>
 	<script src="/GetBooks.js"></script>
