--- a/web/ShowMetadata.html
+++ b/web/ShowMetadata.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Link favicon, so google can show in search results -->
+    <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
+
     <!-- Bootstrap CSS -->
     <title>clas digital</title>
 	<script>
