--- a/web/private/write/UploadBook.html
+++ b/web/private/write/UploadBook.html
@@ -7,431 +7,14 @@
     <title>Upload book - clas digital</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <script src="/user.js"></script>
     <link href="/topnav.css" rel="stylesheet" type="text/css">
+    <link href="UploadBook.css" rel="stylesheet">
+
 	<link rel=”canonical” href=”https://www.clas-digital.uni-frankfurt.de/private/write/UploadBook.html” />
-    <style>
 
-html {
-    margin:0;
-}
-body {
-    margin:0;
-}
+    <script src="/user.js"></script>
+    <script src="UploadBook.js"></script>
 
-h2 {
-    margin-top: 2rem;
-}
-
-.biggerPageClass {
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 0.5rem;
-    padding-bottom: 2rem;
-}
-
-.filesList {
-    list-style-type: none;
-    width: 100%;
-    color: white;
-    padding: 0;
-}
-
-.filesList>li {
-    display: block;
-    padding: 2rem;
-    background-color: #4682b4;
-    border-bottom: 1px solid white;
-}
-
-.filesList li p div {
-    display: block;
-    padding-left: 3rem;
-    padding-right: 3rem;
-    font-size: large;
-    vertical-align: center;
-    line-height: 1rem;
-    color: black;
-}
-
-.filesList li button {
-    margin: auto;
-    margin-left: 1rem;
-    background-color: red;
-    color: black;
-    padding: 0.5rem;
-}
-
-.filesList li button:hover{
-    background-color: black;
-    color: white;
-    transition: all 0.4s ease;
-}
-
-.filesList p progress{
-    margin: auto;
-    margin-right: 3rem;
-}
-
-.filesList>li {
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 104 168'><polygon stroke='white' stroke-width='2' fill='none' points='0,0 0,162 100,162 100,40 60,0' /><path stroke='white' stroke-width='2' fill='none' d='M60,0 L60,40 L100,40' /></svg>");
-    background-repeat: no-repeat;
-    background-size: 2.2rem;
-    background-position: 1rem center;
-    padding-left:4rem;
-
-}
-
-.filesList>li:first-child {
-    background-color: #ccd7ff;
-    height: 8rem;
-    line-height: 4rem;
-    vertical-align: middle;
-    text-align: center;
-    color: grey;
-    border-bottom: none;
-    transition: font 0.2s ease;
-}
-
-.filesList>li:not(:first-child):hover {
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 104 168'><polygon stroke='white' stroke-width='2' fill='none' points='0,0 0,162 100,162 100,40 60,0' /><path stroke='white' stroke-width='2' fill='none' d='M60,0 L60,40 L100,40' /></svg>"),
-    url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 104 168'><path stroke='white' stroke-width='2' fill='none' d='M0,20 L100,20'/><polygon stroke='white' stroke-width='2' fill='none' points='10,20 20,162 80,162 90,20'/><path stroke='white' stroke-width='2' fill='none' d='M25,30 L33,155'/><path stroke='white' stroke-width='2' fill='none' d='M42.5,30 L45,155'/><path stroke='white' stroke-width='2' fill='none' d='M58.5,30 L55,155'/><path stroke='white' stroke-width='2' fill='none' d='M75,30 L67,155'/><path stroke='white' stroke-width='2' fill='none' d='M30,20 L35,0 L65,0 70,20'/></svg>");
-background-position: 1rem center, right 1rem center;
-}
-
-.saveButton {
-    display: block;
-    margin: 0 auto;
-    height: 4.8rem;
-    width: 25rem;
-    line-height: 2rem;
-
-}
-
-.pagesRange {
-    color: white;
-    padding: 1.5rem;
-    padding-left: 5rem;
-    background-color: #4682b4;
-    margin-bottom: 2rem;
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 154 186'><polygon stroke='white' stroke-width='2' fill='none' points='50,0  50,50 60,50 100,90 100,132 150,132 150,40 110,0' /><path stroke='white' stroke-width='2' fill='none' d='M110,0 L110,40 L150,40' /><polygon stroke='white' stroke-width='2' stroke-linejoin='bevel' fill='none' points='0,50 0,182 100,182 100,90 60,50' /><path stroke='white' stroke-width='2' fill='none' d='M60,50 L60,90 L100,90' /></svg>");
-    background-repeat: no-repeat;
-    background-size: 3rem;
-    background-position: 1rem center;
-}
-
-.hasText {
-    color: white;
-    padding: 1.5rem;
-    padding-left: 5rem;
-    background-color: #4682b4;
-    margin-bottom: 2rem;
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 154 156'><circle cx='50' cy='50' r='50' stroke='white' stroke-width='2' fill='none' /><path stroke='white' stroke-width='2' fill='none' d='M20,30 L80,30'/><path stroke='white' stroke-width='2' fill='none' d='M20,50 L80,50'/><path stroke='white' stroke-width='2' fill='none' d='M20,70 L80,70'/><path stroke='white' stroke-width='2' fill='none' d='M85.0903524534,85.0903524534 L150,150'/></svg>");
-    background-repeat: no-repeat;
-    background-size: 3rem;
-    background-position: 1rem center;
-}
-
-.inputStyle {
-    width: 80%;
-    height: 5vh;
-    opacity: 0;
-}
-    </style>
-
-    <script>
-	function init_events()
-{
-    document.getElementById("fileUpID").addEventListener("change",eventoninput,false);
-}
-
-function eventoninput(e) {
-    console.log(e.target.files.length);
-    document.getElementById("FileDropList").innerHTML = "<li onclick='document.getElementById("+"\"fileUpID\""+").click()'>Hier klicken um andere Dateien auszuwaehlen</li>";
-
-    for(let i = 0; i < e.target.files.length; i++)
-    {
-	let list = document.createElement("li");
-
-	let p = document.createElement("p");
-	p.innerHTML = "<div>File selected: "+e.target.files[i].name+"</div>";
-
-	let prog = document.createElement("progress");
-	let span = document.createElement("span");
-	prog.style["float"] = "right";
-	prog.style["display"] = "inline-block";
-	prog["max"] = "100";
-
-	span.innerHTML = "0%";
-	span.style["float"] = "right";
-	span.style["margin-right"] = "2rem";
-
-	p.appendChild(prog);
-	p.appendChild(span);
-	list.appendChild(p);
-	list.onclick = function(){this.parentNode.removeChild(this);};
-	document.getElementById("FileDropList").appendChild(list);
-	list.progentry = prog;
-	list.spanentry = span;
-	list.file = e.target.files[i];
-    }
-
-}
-
-function ShowStatus(x,color)
-{
-    let ban = document.getElementById("status_banner");
-    ban.innerHTML = x;
-    ban.style.color = color;
-    window.scrollTo(0,0);
-}
-
-function Upload(x,key)
-{
-    let xhr = new XMLHttpRequest();
-    let create_ocr = document.getElementById("languageoptenabled").checked;
-    let language_ocr = document.getElementById("languageopt").value;
-    if(x.force_overwrite == true)
-	xhr.open("POST","/upload?scanid="+key+"&create_ocr="+create_ocr+"&language="+language_ocr+"&filename="+x.file.name+"&forced=true",true);
-    else
-	xhr.open("POST","/upload?scanid="+key+"&create_ocr="+create_ocr+"&language="+language_ocr+"&filename="+x.file.name,true);
-
-    x.progentry.value = 0;
-    xhr.onload = function() {
-	if(xhr.status == 403)
-	{
-	    if(xhr.responseText == "file_exists" && x.force_overwrite!=true) //File exists go for overwrite
-	    {
-		x.style.background = "yellow";
-		x.children[0].children[0].innerHTML = "File already exists: "+x.file.name+", overwrite?";
-		let butt = document.createElement("compare");
-		butt.innerHTML = "Compare Files";
-		butt.style.background = "blue";
-		butt.style.float = "right";
-		butt.style.padding = "0.5rem";
-		butt.style.cursor = "pointer";
-		butt.onclick = function() {
-		    OpenModal(x.file,key);
-		}
-		x.children[0].children[0].appendChild(butt);
-		x.children[0].children[1].style.display = "none";
-		x.children[0].children[2].style.display = "none";
-		document.getElementById("nobut").onclick = function() {
-		    HideModal();
-		    x.innerHTML = "<p><div>Canceled upload of: "+x.file.name+"</div></p>";
-		    x.style.background = "red";
-		    x.upload_finished = true;
-		    UploadAll();
-		}
-
-		document.getElementById("yesbut").onclick = function() {
-		    HideModal();
-		    x.force_overwrite = true;
-		    x.style.background = "";
-		    x.children[0].children[1].style.display = "";
-		    x.children[0].children[2].style.display = "";
-		    butt.parentNode.removeChild(butt);
-		    Upload(x,key);
-		}
-		return;
-
-		let yes = document.createElement("button");
-		let no = document.createElement("button");
-		yes.style.background = "red";
-		yes.innerHTML = "Yes";
-		no.style.background = "green";
-		no.innerHTML = "No";
-		x.children[0].children[0].appendChild(yes);
-		x.children[0].children[0].appendChild(no);
-		x.children[0].children[1].style.display = "none";
-		x.children[0].children[2].style.display = "none";
-
-		yes.onclick = function() {
-		 		}
-
-		no.onclick = function() {
-		}
-	    }
-	    else
-	    {
-		return ShowStatus("Server returned error: "+xhr.responseText,"red");
-	    }
-	    //File exists already ask for override permission
-	}
-	else if(xhr.status==200)
-	{
-	    x.style.background = "green";
-	    x.upload_finished = true;
-	    x.progentry.value = 100;
-	    x.spanentry.innerHTML = 100+"%";
-	    UploadAll();	//Recursivly upload rest of the files
-	}
-	else
-	    return ShowStatus("Unknown error while uploading please dont try again and show this message to the server administrators","red");
-    }
-
-    xhr.onprogress = function (event) {
-	if(event.lengthComputable)
-	{
-	    let xval = Math.round(event.loaded/event.total*100);
-	    x.progentry.value = xval;
-	    x.spanentry.innerHTML = xval+"%";
-	}
-    };
-
-    xhr.send(x.file);
-}
-
-function ExtractKey()
-{
-    let permalink = document.getElementById("Permalink").value;
-    if(permalink=="")
-	return "";
-
-    let arr = permalink.split("/");
-    let finalKey = "";
-    for(var i = 0; i < arr.length; i++)
-    {
-	if(arr[i]=="itemKey")
-	{
-	    finalKey = arr[i+1];
-	    break;
-	}
-    }
-    if(finalKey=="" && (arr.length==1))
-	finalKey = permalink;
-    return finalKey;
-}
-
-function HideModal()
-{
-    document.getElementById("modal").style.display = "none";
-}
-
-function OpenModal(fl,key)
-{
-    let ending = fl.name.substr(fl.name.lastIndexOf(".")+1);
-
-    if(ending == 'jpg'||ending=='JPG'||ending=='png'||ending=='PNG')
-	ShowImageSlide(fl,key);
-    else
-	ShowOCRSlide(fl,key);
-}
-
-function ShowOCRSlide(fl,key)
-{
-    document.getElementById("modal").style.display = "block";
-    let oldf = document.getElementById("oldfile");
-    let newf = document.getElementById("newfile");
-    let oldfileparagraph = document.createElement("p");
-    let newfileparagraph = document.createElement("p");
-    oldfileparagraph.style.background = "white";
-    newfileparagraph.style.background = "white";
-    oldf.appendChild(oldfileparagraph);
-    newf.appendChild(newfileparagraph);
-
-    let xhr = new XMLHttpRequest();
-    xhr.open("GET","/books/"+key+"/"+fl.name,true);
-    xhr.onload = function() {
-	if(xhr.status!=200)
-	{
-	    oldfileparagraph.innerHTML = "Could not load file sorry for that :(";
-	}
-	else
-	{
-	    oldfileparagraph.innerHTML = xhr.responseText;
-	}
-    }
-    xhr.send();
-
-    if (FileReader) {
-	var fr = new FileReader();
-	fr.onload = function () {
-	    newfileparagraph.innerHTML = fr.result;
-	}
-	fr.readAsText(fl);
-    }
-    else
-    {
-	newfileparagraph.innerHTML = "Could not load file sorry for that :(";
-    }
-}
-
-function ShowImageSlide(fl,key)
-{
-    document.getElementById("modal").style.display = "block";
-    let kk = document.getElementById("oldfile");
-    kk.innerHTML = "";
-    document.getElementById("newfile").innerHTML = "";
-
-    let val = document.createElement("img");
-    val.src = "/books/"+key+"/"+fl.name;
-    val.style["max-height"] = "100%";
-    val.style["max-width"] = "100%";
-    val.style.margin = "auto";
-    val.style.display = "inherit";
-    kk.appendChild(val);
-
-    if (FileReader) {
-	var fr = new FileReader();
-	fr.onload = function () {
-	    let valnew = document.createElement("img");
-	    valnew.src = fr.result;
-	    valnew.style["max-height"] = "100%";
-	    valnew.style["max-width"] = "100%";
-	    valnew.style.margin = "auto";
-	    valnew.style.display = "inherit";
-	    document.getElementById("newfile").appendChild(valnew);
-	}
-	fr.readAsDataURL(fl);
-    }
-}
-
-function ShowBookContentLink()
-{
-    let lnk = ExtractKey();
-    document.getElementById("BookContentLink").innerHTML = "<a href='/books/"+lnk+"/' target='_blank'>Book File List Index</a><a style='margin-left: 4rem;' href='/ShowMetadata.html?scanId="+lnk+"' target='_blank'> Book Metadata</a>";
-}
-
-function UploadAll()
-{
-    let elem = document.getElementById("fileUpID");
-    elem.onclick = function(){return false;};
-
-    let finalKey = ExtractKey();
-    if(finalKey=="")
-	return ShowStatus("Either you forgot to type in the item key or the permalink is in the wrong format!","red");
-
-
-
-    let val = document.getElementById("FileDropList").children;
-    for(let i = 1; i < val.length; i++)
-    {
-	if(val[i].upload_finished==undefined || val[i].upload_finished == null)
-	{
-	    val[i].onclick = function() { };
-	    Upload(val[i],finalKey);
-	    return;
-	}
-    }
-    ShowStatus("Uploaded all files successfully! In order to find results in the new book you have to restart the server!","green");
-}
-
-function show_language(x)
-{
-    if(x.checked)
-    {
-	document.getElementById("languageopt").style.display = "inline-block";
-    }
-    else
-    {
-	document.getElementById("languageopt").style.display = "none";
-    }
-}
-
-
-window.addEventListener("load",function(){initialise("uploadbooklink");init_events();},false);
-    </script>
 </head>
 <body>
     <!-- The navigation bar config -->
