Changed the url again to be shorter and better fitting, also added the basic statistics page

--- a/web/private/admin/Administration.html
+++ b/web/private/admin/Administration.html
@@ -269,6 +269,7 @@ window.addEventListener("load",function(){initialise("administrationlink");OnUse
 <div id='tpnav' class="topnav">
     <a id='homelink' href='/information/'>Information</a>
     <a id='searchlink' href='/search'>Search</a>
+    <a id='statisticslink' href='/statistics/'>Statistics</a>
     <a id='administrationlink' class='classifiedContent active' href='/private/admin/Administration.html' data-acc=4>Administration</a>
     <a id='uploadbooklink' class='classifiedContent' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
     <div class='topnav-right-in' id='loggedintopnav'>
