--- a/web/Search.html
+++ b/web/Search.html
@@ -26,6 +26,7 @@
     <div id='tpnav' class="topnav">
         <a id='homelink' href='/information/'>Information</a>
         <a id='searchlink' class="active" href='/search'>Search</a>
+	<a id='statisticslink' href='/statistics/'>Statistics</a>
         <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
         <a id='uploadbooklink' class='classifiedContent' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
 
