--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -53,6 +53,7 @@ window.addEventListener("load",function(){initialise("homelink");},false);
     <div id='tpnav' class="topnav">
         <a id='homelink' class="active" href='/information/'>Information</a>
         <a id='searchlink' href='/search'>Search</a>
+	<a id='statisticslink' href='/statistics/'>Statistics</a>
         <a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
         <a id='uploadbooklink' class='classifiedContent' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
         <div class='topnav-right-in' id='loggedintopnav'>
