--- a/web/private/write/UploadBook.html
+++ b/web/private/write/UploadBook.html
@@ -438,6 +438,7 @@ window.addEventListener("load",function(){initialise("uploadbooklink");init_even
     <div id='tpnav' class="topnav">
 	<a id='homelink' href='/information/'>Information</a>
 	<a id='searchlink' href='/search'>Search</a>
+	<a id='statisticslink' href='/statistics/'>Statistics</a>
 	<a id='administrationlink' class='classifiedContent' href='/private/admin/Administration.html' data-acc=4>Administration</a>
 	<a id='uploadbooklink' class='classifiedContent active' href='/private/write/UploadBook.html' data-acc=2>Upload Books</a>
 
