--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -32,15 +32,12 @@ html {
 
 .GeneralPageLayout {
     width: 100%;
-    text-align: center;
 }
 
 .GeneralPageLayout p {
-    width: 40vw;
-    margin: auto;
-    padding: 1rem;
-    margin-top: 4.5rem;
-    font-size: large;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 3rem;
 }
 
 </style>
