--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" href="static/fav/hand-top-right-16+32+48.ico"/>
 
 	<link rel="stylesheet" href="/GetBooks.css">	
+	<script>let gGlobalBookId=undefined;</script>
 	<script src="/general.js"></script>
 	<script src="/GetBooks.js"></script>
 
