--- a/web/information/index.de.html
+++ b/web/information/index.de.html
@@ -17,9 +17,9 @@
     <script src='../user.js'></script>
 <style>
 body {
-    background: linear-gradient(rgba(255,255,255,.9), rgba(255,255,255,.9)), url("/clasdigital.png");;
+    background: linear-gradient(rgba(255,255,255,.1), rgba(255,255,255,.1)), url("/clasdigital.png");;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: right;
 }
 
 body {
@@ -35,9 +35,10 @@ html {
 }
 
 .GeneralPageLayout p {
-    width: 80%;
-    margin-left: 10%;
-    margin-top: 3rem;
+    width: 40%;
+    margin-left: 7%;
+    margin-right: 50%;
+    margin-top: 5rem;
 }
 
 </style>
